--- a/cron-deploy.yml
+++ b/cron-deploy.yml
@@ -20,7 +20,7 @@ spec:
           containers:
           - name: cronjob-absa-deploy
             image: image-registry.openshift-image-registry.svc:5000/sumit/absademo
-            command: ["/opt/app" ,"java", "-jar", "configenvironment.jar", "hello", "these", "are", "from", "args"]
+            command: ["java", "-jar", "/opt/app/configenvironment.jar", "hello", "these", "are", "from", "args"]
             env: 
               - name: client.name
                 valueFrom:
