--- a/cron-deploy.yml
+++ b/cron-deploy.yml
@@ -21,7 +21,7 @@ spec:
           - name: cronjob-absa-deploy
             image: image-registry.openshift-image-registry.svc:5000/sumit/absademo
             #command: ["java", "-jar", "/opt/app/configenvironment.jar", "hello", "these", "are", "from", "args"]
-            command: ["java", "-jar", "/opt/app/config.jar"]
+            command: ["java", "-jar", "/opt/app/configenvironment.jar"]
             env: 
               - name: client.name
                 valueFrom:
